refine smart quote detection even more

--- a/The_Hound_of_the_Baskervilles.html
+++ b/The_Hound_of_the_Baskervilles.html
@@ -201,7 +201,7 @@
 <p>“Enormous.”</p>
 <p>“But it had not approached the body?”</p>
 <p>“No.”</p>
-<p>“What sort of night was it?'</p>
+<p>“What sort of night was it?”</p>
 <p>“Damp and raw.”</p>
 <p>“But not actually raining?”</p>
 <p>“No.”</p>
@@ -352,7 +352,7 @@
 <p>“It is here in the corner.”</p>
 <p>“Might I trouble you for it—the inside page, please, with the leading articles?” He glanced swiftly over it, running his eyes up and down the columns. “Capital article this on free trade. Permit me to give you an extract from it.</p>
 <blockquote>
-  <p>'You may be cajoled into imagining that your own special trade or your own industry will be encouraged by a protective tariff, but it stands to reason that such legislation must in the long run keep away wealth from the country, diminish the value of our imports, and lower the general conditions of life in this island.'</p>
+  <p>‘You may be cajoled into imagining that your own special trade or your own industry will be encouraged by a protective tariff, but it stands to reason that such legislation must in the long run keep away wealth from the country, diminish the value of our imports, and lower the general conditions of life in this island.’</p>
 </blockquote>
 <p>“What do you think of that, Watson?” cried Holmes in high glee, rubbing his hands together with satisfaction. “Don’t you think that is an admirable sentiment?”</p>
 <p>Dr. Mortimer looked at Holmes with an air of professional interest, and Sir Henry Baskerville turned a pair of puzzled dark eyes upon me.</p>
