fix XML errors in ebooks

--- a/Dracula.html
+++ b/Dracula.html
@@ -1997,7 +1997,7 @@ of a tall, handsome, curly-haired man???</p>
 <h3>Letter, Lucy Westenra to Mina Murray</h3>
 <p class="letter_header">17, Chatham Street<br/>
 Wednesday</p>
-<p class="noindent">My dearest Mina,<br>
+<p class="noindent">My dearest Mina,<br/>
 I must say you tax me very unfairly with being a bad correspondent.
 I wrote you twice since we parted, and your last letter was only
 your second. Besides, I have nothing to tell you. There is really
@@ -2050,7 +2050,7 @@ Goodnight again. L.</p>
 <hr/>
 <h3>Letter, Lucy Westenra to Mina Murray</h3>
 <p class="letter_header">24 May</p>
-<p class="noindent">My dearest Mina,<br>
+<p class="noindent">My dearest Mina,<br/>
 Thanks, and thanks, and thanks again for your sweet letter. It
 was so nice to be able to tell you and to have your sympathy.</p>
 <p>My dear, it never rains but it pours. How true the old proverbs
@@ -2243,7 +2243,7 @@ paramount, and only accident or a series of accidents can balance it.</p>
 <hr/>
 <h3>Letter, Quincey P. Morris to Hon. Arthur Holmood</h3>
 <p class="letter_header">25 May.</p>
-<p class="noindent">My dear Art,<br>
+<p class="noindent">My dear Art,<br/>
 We’ve told yarns by the campfire in the prairies, and dressed one
 another’s wounds after trying a landing at the Marquesas, and drunk
 healths on the shore of Titicaca. There are more yarns to be told,
