--- a/Frankenstein.html
+++ b/Frankenstein.html
@@ -305,7 +305,7 @@ Robert Walton</p>
 July 7<sup>th</sup>, 17—<br/>
 To Mrs. Saville, England</p>
 <p class="noindent">
-My dear Sister,<br>
+My dear Sister,<br/>
 I write a few lines in haste to say that I am safe—and well advanced
 on my voyage. This letter will reach England by a merchantman now on
 its homeward voyage from Archangel; more fortunate than I, who may not
