--- a/The_Hound_of_the_Baskervilles.html
+++ b/The_Hound_of_the_Baskervilles.html
@@ -16,7 +16,7 @@
     <meta name="dc.issued"       content="1902" data-scheme="dc.W3CDTF" />
     <meta name="dc.language"     content="en-GB" data-scheme="dc.RFC4646" />
     <meta name="dc.rights"       content="Text and stylesheet are in the public domain. Third-party Javascript might come with different terms." />
-    <link rel="dc.identifier"    href="http://www.manuel-strehl.de/ebooks/The%20Adventures%20of%20Sherlock%20Holmes" />
+    <link rel="dc.identifier"    href="http://www.manuel-strehl.de/ebooks/The%20Hound%20of%20the%20Baskervilles" />
     <link rel="dc.tableofContents" href="#Table_of_Contents" />
     <link rel="dc.license"       href="http://creativecommons.org/licenses/publicdomain/" title="License" />
     <link rel="dc.source"        href="http://www.gutenberg.org/etext/3070" title="Original Source" />
