--- a/A_Study_in_Scarlet.html
+++ b/A_Study_in_Scarlet.html
@@ -316,7 +316,7 @@
 <p>“Come along, Doctor,” he said; “we shall go and look him up. I’ll tell you one thing which may help you in the case,” he continued, turning to the two detectives. “There has been murder done, and the murderer was a man. He was more than six feet high, was in the prime of life, had small feet for his height, wore coarse, square-toed boots and smoked a Trichinopoly cigar. He came here with his victim in a four-wheeled cab, which was drawn by a horse with three old shoes and one new one on his off fore leg. In all probability the murderer had a florid face, and the finger-nails of his right hand were remarkably long. These are only a few indications, but they may assist you.”</p>
 <p>Lestrade and Gregson glanced at each other with an incredulous smile.</p>
 <p>“If this man was murdered, how was it done?” asked the former.</p>
-<p>“Poison,” said Sherlock Holmes curtly, and strode off. “One other thing, Lestrade,” he added, turning round at the door: “ ‘Rache,’ is the German for ‘revenge;’ so don’t lose your time looking for Miss Rachel.”</p>
+<p>“Poison,” said Sherlock Holmes curtly, and strode off. “One other thing, Lestrade,” he added, turning round at the door: “ ‘<span lang="de">Rache</span>,’ is the German for ‘revenge;’ so don’t lose your time looking for Miss Rachel.”</p>
 <p>With which Parthian shot he walked away, leaving the two rivals open-mouthed behind him.</p>
 </section>
 <section id="What_John_Rance_had_to_Tell">
