--- a/index.de.html
+++ b/index.de.html
@@ -41,32 +41,90 @@
 <h2>Inhalt</h2>
 <p>Was gibt es hier?</p>
 <ol>
-<li><a href="A_Christmas_Carol.html">A Christmas Carol <em>von Charles Dickens</em></a> (englisch) (<a href="A_Christmas_Carol.pdf">PDF</a>, <a href="A_Christmas_Carol.epub">EPUB</a>)</li>
-<li><a href="A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court <em>von Marc Twain</em></a> (englisch) (<a href="A_Connecticut_Yankee.pdf">PDF</a>, <a href="A_Connecticut_Yankee.epub">EPUB</a>)</li>
-<li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland <em>von Lewis Carroll</em></a> (englisch) (<a href="Alices_Adventures_in_Wonderland.pdf">PDF</a>, <a href="Alices_Adventures_in_Wonderland.epub">EPUB</a>)</li>
-<li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness <em>von H. P. Lovecraft</em></a> (englisch) (<a href="At_the_Mountains_of_Madness.pdf">PDF</a>, <a href="At_the_Mountains_of_Madness.epub">EPUB</a>)</li>
-<li><a href="Biene_Maja.html">Die Biene Maja <em>von Waldemar Bonsels</em></a> (<a href="Biene_Maja.pdf">PDF</a>, <a href="Biene_Maja.epub">EPUB</a>)</li>
-<li><a href="Dracula.html">Dracula <em>von Bram Stoker</em></a> (englisch) (<a href="Dracula.pdf">PDF</a>, <a href="Dracula.epub">EPUB</a>)</li>
-<li><a href="Frankenstein.html">Frankenstein <em>von Mary Shelley</em></a> (englisch) (<a href="Frankenstein.pdf">PDF</a>, <a href="Frankenstein.epub">EPUB</a>)</li>
-<li><a href="Gullivers_Travels.html">Gulliver’s Travels <em>von Jonathan Swift</em></a> (englisch) (<a href="Gullivers_Travels.pdf">PDF</a>, <a href="Gullivers_Travels.epub">EPUB</a>)</li>
-<li><a href="Moby-Dick.html">Moby-Dick, <em>von Herman Melville</em></a> (englisch) (<a href="Moby-Dick.pdf">PDF</a>, <a href="Moby-Dick.epub">EPUB</a>)</li>
-<li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym <em>von Edgar Allan Poe</em></a> (englisch) (<a href="Narrative_of_Arthur_Gordon_Pym.pdf">PDF</a>, <a href="Narrative_of_Arthur_Gordon_Pym.epub">EPUB</a>)</li>
-<li><a href="New_Arabian_Nights.html">New Arabian Nights <em>von Robert Lewis Stevenson</em></a> (englisch) (<a href="New_Arabian_Nights.pdf">PDF</a>, <a href="New_Arabian_Nights.epub">EPUB</a>)</li>
-<li><a href="Nils_Holgersson.html">Nils Holgersson <em>von Selma Lagerlöf</em></a> (<a href="Nils_Holgersson.pdf">PDF</a>, <a href="Nils_Holgersson.epub">EPUB</a>)</li>
-<li><a href="Robinson_Crusoe.html">Robinson Crusoe <em>von Daniel Dafoe</em></a> (englisch) (<a href="Robinson_Crusoe.pdf">PDF</a>, <a href="Robinson_Crusoe.epub">EPUB</a>)</li>
-<li><a href="Siddhartha.html">Siddhartha <em>von Hermann Hesse</em></a> (<a href="Siddhartha.pdf">PDF</a>, <a href="Siddhartha.epub">EPUB</a>)</li>
-<li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes <em>von Sir Arthur Conan Doyle</em></a> (englisch) (<a href="The_Adventures_of_Sherlock_Holmes.pdf">PDF</a>, <a href="The_Adventures_of_Sherlock_Holmes.epub">EPUB</a>)</li>
-<li><a href="The_Book_of_Tea.html">The Book of Tea <em>von Kakuzō Okakura</em></a> (englisch) (<a href="The_Book_of_tea.pdf">PDF</a>, <a href="The_Book_of_tea.epub">EPUB</a>)</li>
-<li><a href="The_Call_of_Cthulhu.html">The Call of Cthulhu <em>von H. P. Lovecraft</em></a> (englisch) (<a href="The_Call_of_Cthulhu.pdf">PDF</a>, <a href="The_Call_of_Cthulhu.epub">EPUB</a>)</li>
-<li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward <em>von H. P. Lovecraft</em></a> (englisch) (<a href="The_Case_of_Charles_Dexter_Ward.pdf">PDF</a>, <a href="The_Case_of_Charles_Dexter_Ward.epub">EPUB</a>)</li>
-<li><a href="The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales <em>von Oscar Wilde</em></a> (englisch) (<a href="The_Happy_Prince_and_Other_Tales.pdf">PDF</a>, <a href="The_Happy_Prince_and_Other_Tales.epub">EPUB</a>)</li>
-<li><a href="The_Invisible_Man.html">The Invisible Man <em>von H. G. Wells</em></a> (englisch) (<a href="The_Invisible_Man.pdf">PDF</a>, <a href="The_Invisible_Man.epub">EPUB</a>)</li>
-<li><a href="The_Jungle_Book.html">The Jungle Book <em>von Rudyard Kipling</em></a> (englisch) (<a href="The_Jungle_Book.pdf">PDF</a>, <a href="The_Jungle_Book.epub">EPUB</a>)</li>
-<li><a href="The_Picture_of_Dorian_Gray.html">The Picture of Dorian Gray <em>von Oscar Wilde</em></a> (englisch) (<a href="The_Picture_of_Dorian_Gray.pdf">PDF</a>, <a href="The_Picture_of_Dorian_Gray.epub">EPUB</a>)</li>
-<li><a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html">The Strange Case of Dr. Jekyll and Mr. Hyde <em>von Robert Lewis Stevenson</em></a> (englisch) (<a href=".pdf">PDF</a>, <a href=".epub">EPUB</a>)</li>
-<li><a href="The_Time_Machine.html">The Time Machine <em>von H. G. Wells</em></a> (englisch) (<a href="The_Time_Machine.pdf">PDF</a>, <a href="The_Time_Machine.epub">EPUB</a>)</li>
-<li><a href="The_War_of_the_Worlds.html">The War of the Worlds <em>von H. G. Wells</em></a> (englisch) (<a href="The_War_of_the_Worlds.pdf">PDF</a>, <a href="The_War_of_the_Worlds.epub">EPUB</a>)</li>
-<li><a href="Treasure_Island.html">Treasure Island <em>von Robert Lewis Stevenson</em></a> (englisch) (<a href="Treasure_Island.pdf">PDF</a>, <a href="Treasure_Island.epub">EPUB</a>)</li>
+<li><a href="A_Christmas_Carol.html">A Christmas Carol <em>von Charles Dickens</em></a> (englisch)
+   (<a href="A_Christmas_Carol.pdf">PDF</a>,
+    <a href="A_Christmas_Carol.epub">EPUB</a>)</li>
+<li><a href="A_Connecticut_Yankee.html">A Connecticut Yankee at King Arthur’s Court <em>von Marc Twain</em></a> (englisch)
+   (<a href="A_Connecticut_Yankee.pdf">PDF</a>,
+    <a href="A_Connecticut_Yankee.epub">EPUB</a>)</li>
+<li><a href="Alices_Adventures_in_Wonderland.html">Alice’s Adventures in Wonderland <em>von Lewis Carroll</em></a> (englisch)
+   (<a href="Alices_Adventures_in_Wonderland.pdf">PDF</a>,
+    <a href="Alices_Adventures_in_Wonderland.epub">EPUB</a>)</li>
+<li><a href="A_Study_in_Scarlet.html">A_Study_in_Scarlet <em>von Sir Arthur Conan Doyle</em></a> (englisch)
+   (<a href="A_Study_in_Scarlet.pdf">PDF</a>,
+    <a href="A_Study_in_Scarlet.epub">EPUB</a>)</li>
+<li><a href="At_the_Mountains_of_Madness.html">At the Mountains of Madness <em>von H. P. Lovecraft</em></a> (englisch)
+   (<a href="At_the_Mountains_of_Madness.pdf">PDF</a>,
+    <a href="At_the_Mountains_of_Madness.epub">EPUB</a>)</li>
+<li><a href="Biene_Maja.html">Die Biene Maja <em>von Waldemar Bonsels</em></a>
+   (<a href="Biene_Maja.pdf">PDF</a>,
+    <a href="Biene_Maja.epub">EPUB</a>)</li>
+<li><a href="Dracula.html">Dracula <em>von Bram Stoker</em></a> (englisch)
+   (<a href="Dracula.pdf">PDF</a>,
+    <a href="Dracula.epub">EPUB</a>)</li>
+<li><a href="Frankenstein.html">Frankenstein <em>von Mary Shelley</em></a> (englisch)
+   (<a href="Frankenstein.pdf">PDF</a>,
+    <a href="Frankenstein.epub">EPUB</a>)</li>
+<li><a href="Gullivers_Travels.html">Gulliver’s Travels <em>von Jonathan Swift</em></a> (englisch)
+   (<a href="Gullivers_Travels.pdf">PDF</a>,
+    <a href="Gullivers_Travels.epub">EPUB</a>)</li>
+<li><a href="Moby-Dick.html">Moby-Dick, <em>von Herman Melville</em></a> (englisch)
+   (<a href="Moby-Dick.pdf">PDF</a>,
+    <a href="Moby-Dick.epub">EPUB</a>)</li>
+<li><a href="Narrative_of_Arthur_Gordon_Pym.html">Narrative of Arthur Gordon Pym <em>von Edgar Allan Poe</em></a> (englisch)
+   (<a href="Narrative_of_Arthur_Gordon_Pym.pdf">PDF</a>,
+    <a href="Narrative_of_Arthur_Gordon_Pym.epub">EPUB</a>)</li>
+<li><a href="New_Arabian_Nights.html">New Arabian Nights <em>von Robert Lewis Stevenson</em></a> (englisch)
+   (<a href="New_Arabian_Nights.pdf">PDF</a>,
+    <a href="New_Arabian_Nights.epub">EPUB</a>)</li>
+<li><a href="Nils_Holgersson.html">Nils Holgersson <em>von Selma Lagerlöf</em></a>
+   (<a href="Nils_Holgersson.pdf">PDF</a>,
+    <a href="Nils_Holgersson.epub">EPUB</a>)</li>
+<li><a href="Robinson_Crusoe.html">Robinson Crusoe <em>von Daniel Dafoe</em></a> (englisch)
+   (<a href="Robinson_Crusoe.pdf">PDF</a>,
+    <a href="Robinson_Crusoe.epub">EPUB</a>)</li>
+<li><a href="Siddhartha.html">Siddhartha <em>von Hermann Hesse</em></a>
+   (<a href="Siddhartha.pdf">PDF</a>,
+    <a href="Siddhartha.epub">EPUB</a>)</li>
+<li><a href="The_Adventures_of_Sherlock_Holmes.html">The Adventures of Sherlock Holmes <em>von Sir Arthur Conan Doyle</em></a> (englisch)
+   (<a href="The_Adventures_of_Sherlock_Holmes.pdf">PDF</a>,
+    <a href="The_Adventures_of_Sherlock_Holmes.epub">EPUB</a>)</li>
+<li><a href="The_Book_of_Tea.html">The Book of Tea <em>von Kakuzō Okakura</em></a> (englisch)
+   (<a href="The_Book_of_Tea.pdf">PDF</a>,
+    <a href="The_Book_of_Tea.epub">EPUB</a>)</li>
+<li><a href="The_Call_of_Cthulhu.html">The Call of Cthulhu <em>von H. P. Lovecraft</em></a> (englisch)
+   (<a href="The_Call_of_Cthulhu.pdf">PDF</a>,
+    <a href="The_Call_of_Cthulhu.epub">EPUB</a>)</li>
+<li><a href="The_Case_of_Charles_Dexter_Ward.html">The Case of Charles Dexter Ward <em>von H. P. Lovecraft</em></a> (englisch)
+   (<a href="The_Case_of_Charles_Dexter_Ward.pdf">PDF</a>,
+    <a href="The_Case_of_Charles_Dexter_Ward.epub">EPUB</a>)</li>
+<li><a href="The_Happy_Prince_and_Other_Tales.html">The Happy Prince and Other Tales <em>von Oscar Wilde</em></a> (englisch)
+   (<a href="The_Happy_Prince_and_Other_Tales.pdf">PDF</a>,
+    <a href="The_Happy_Prince_and_Other_Tales.epub">EPUB</a>)</li>
+<li><a href="The_Hound_of_the_Baskervilles.html">The Hound_of_the_Baskervilles <em>von Sir Arthur Conan Doyle</em></a> (englisch)
+   (<a href="The_Hound_of_the_Baskervilles.pdf">PDF</a>,
+    <a href="The_Hound_of_the_Baskervilles.epub">EPUB</a>)</li>
+<li><a href="The_Invisible_Man.html">The Invisible Man <em>von H. G. Wells</em></a> (englisch)
+   (<a href="The_Invisible_Man.pdf">PDF</a>,
+    <a href="The_Invisible_Man.epub">EPUB</a>)</li>
+<li><a href="The_Jungle_Book.html">The Jungle Book <em>von Rudyard Kipling</em></a> (englisch)
+   (<a href="The_Jungle_Book.pdf">PDF</a>,
+    <a href="The_Jungle_Book.epub">EPUB</a>)</li>
+<li><a href="The_Picture_of_Dorian_Gray.html">The Picture of Dorian Gray <em>von Oscar Wilde</em></a> (englisch)
+   (<a href="The_Picture_of_Dorian_Gray.pdf">PDF</a>,
+    <a href="The_Picture_of_Dorian_Gray.epub">EPUB</a>)</li>
+<li><a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.html">The Strange Case of Dr. Jekyll and Mr. Hyde <em>von Robert Lewis Stevenson</em></a> (englisch)
+   (<a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.pdf">PDF</a>,
+    <a href="The_Strange_Case_of_Dr._Jekyll_and_Mr._Hyde.epub">EPUB</a>)</li>
+<li><a href="The_Time_Machine.html">The Time Machine <em>von H. G. Wells</em></a> (englisch)
+   (<a href="The_Time_Machine.pdf">PDF</a>,
+    <a href="The_Time_Machine.epub">EPUB</a>)</li>
+<li><a href="The_War_of_the_Worlds.html">The War of the Worlds <em>von H. G. Wells</em></a> (englisch)
+   (<a href="The_War_of_the_Worlds.pdf">PDF</a>,
+    <a href="The_War_of_the_Worlds.epub">EPUB</a>)</li>
+<li><a href="Treasure_Island.html">Treasure Island <em>von Robert Lewis Stevenson</em></a> (englisch)
+   (<a href="Treasure_Island.pdf">PDF</a>,
+    <a href="Treasure_Island.epub">EPUB</a>)</li>
 </ol>
 </section>
 <section id="Credits">
