do some HTML cleanup

--- a/text/Dracula.html
+++ b/text/Dracula.html
@@ -6348,7 +6348,7 @@ and where wild flowers grow of their own accord.</p>
 another. If I do, or if I even open this again, it will be to deal
 with different people and different themes, for here at the end, where
 the romance of my life is told, ere I go back to take up the thread of
-my life-work, I say sadly and without hope, “<strong xml:lang="la" lang="la">finis</strong>”.</p>
+my life-work, I say sadly and without hope, “<strong lang="la">finis</strong>”.</p>
 <hr/>
 <h3>The Westminster Gazette, 25 September A Hampstead Mystery</h3>
 <p>The neighborhood of Hampstead is just at present exercised
@@ -11353,7 +11353,7 @@ discover on what boat and whither bound Count Dracula made his escape.</p>
 <p>“As I knew that he wanted to get back to Transylvania, I felt sure
 that he must go by the Danube mouth, or by somewhere in the Black Sea,
 since by that way he come. It was a dreary blank that was before us.
-<em xml:lang="la" lang="la">Omne ignotum pro magnifico</em>; and so with heavy hearts we start to find
+<em lang="la">Omne ignotum pro magnifico</em>; and so with heavy hearts we start to find
 what ships leave for the Black Sea last night. He was in sailing
 ship, since Madam Mina tell of sails being set. These not so
 important as to go in your list of the shipping in the Times, and so
