--- a/text/Gullivers_Travels.html
+++ b/text/Gullivers_Travels.html
@@ -9827,8 +9827,8 @@ truth; neither indeed can I be ever under the least temptation to
 vary from it, while I retain in my mind the lectures and example
 of my noble master and the other illustrious <em>Houyhnhnms</em> of
 whom I had so long the honour to be an humble hearer.</p>
-<blockquote xml:lang="la" lang="la">
-<p><em>—Nec si miserum Fortuna Sinonem</em><br />
+<blockquote lang="la">
+<p><em>—Nec si miserum Fortuna Sinonem</em><br/>
 <em>Finxit</em>, <em>vanum etiam</em>, <em>mendacemque improba finget</em>.</p>
 </blockquote>
 <p>I know very well, how little reputation is to be got by
