--- a/text/Moby-Dick.html
+++ b/text/Moby-Dick.html
@@ -174,18 +174,18 @@ rolling; for in Dan. <span class="proper_name">Hvalt</span> is arched or vaulted
 <span class="proper_name">Walw-ian</span>, to roll, to wallow.” —<cite>Richardson’s dictionary</cite></p>
 <table>
   <tbody>
-    <tr><td><span class="proper_name" xml:lang="el" lang="el">Ketos</span>,</td><td><span class="proper_name">Greek.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="la" lang="la">Cetus</span>,</td><td><span class="proper_name">Latin.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="ang" lang="ang">Whoel</span>,</td><td><span class="proper_name">Anglo-saxon.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="da" lang="da">Hvalt</span>,</td><td><span class="proper_name">Danish.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="nl" lang="nl">Wal</span>,</td><td><span class="proper_name">Dutch.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="sv" lang="sv">Hwal</span>,</td><td><span class="proper_name">Swedish.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="is" lang="is">Whale</span>,</td><td><span class="proper_name">Icelandic.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="en" lang="en">Whale</span>,</td><td><span class="proper_name">English.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="fr" lang="fr">Baleine</span>,</td><td><span class="proper_name">French.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="es" lang="es">Ballena</span>,</td><td><span class="proper_name">Spanish.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="fj" lang="fj">Pekee-nuee-nuee</span>,</td><td><span class="proper_name">Fegee.</span></td></tr>
-    <tr><td><span class="proper_name" xml:lang="erg" lang="erg">Pekee-nuee-nuee</span>,</td><td><span class="proper_name">Erromangoan.</span></td></tr>
+    <tr><td><span class="proper_name" lang="el">Ketos</span>,</td><td><span class="proper_name">Greek.</span></td></tr>
+    <tr><td><span class="proper_name" lang="la">Cetus</span>,</td><td><span class="proper_name">Latin.</span></td></tr>
+    <tr><td><span class="proper_name" lang="ang">Whoel</span>,</td><td><span class="proper_name">Anglo-saxon.</span></td></tr>
+    <tr><td><span class="proper_name" lang="da">Hvalt</span>,</td><td><span class="proper_name">Danish.</span></td></tr>
+    <tr><td><span class="proper_name" lang="nl">Wal</span>,</td><td><span class="proper_name">Dutch.</span></td></tr>
+    <tr><td><span class="proper_name" lang="sv">Hwal</span>,</td><td><span class="proper_name">Swedish.</span></td></tr>
+    <tr><td><span class="proper_name" lang="is">Whale</span>,</td><td><span class="proper_name">Icelandic.</span></td></tr>
+    <tr><td><span class="proper_name" lang="en">Whale</span>,</td><td><span class="proper_name">English.</span></td></tr>
+    <tr><td><span class="proper_name" lang="fr">Baleine</span>,</td><td><span class="proper_name">French.</span></td></tr>
+    <tr><td><span class="proper_name" lang="es">Ballena</span>,</td><td><span class="proper_name">Spanish.</span></td></tr>
+    <tr><td><span class="proper_name" lang="fj">Pekee-nuee-nuee</span>,</td><td><span class="proper_name">Fegee.</span></td></tr>
+    <tr><td><span class="proper_name" lang="erg">Pekee-nuee-nuee</span>,</td><td><span class="proper_name">Erromangoan.</span></td></tr>
   </tbody>
 </table>
 </section>
@@ -4119,8 +4119,7 @@ grand imposing way.</p>
 <p><strong>The whale never figured in any grand imposing way?</strong> In one of the mighty
 triumphs given to a Roman general upon his entering the world’s capital,
 the bones of a whale, brought all the way from the Syrian coast, were
-the most conspicuous object in the cymballed procession.<span class="footnote"><span
-class="footnote-body">See subsequent chapters for something more on this head.</span></span></p>
+the most conspicuous object in the cymballed procession.<span class="footnote"><span class="footnote-body">See subsequent chapters for something more on this head.</span></span></p>
 <p>Grant it, since you cite it; but, say what you will, there is no real
 dignity in whaling.</p>
 <p><strong>No dignity in whaling?</strong> The dignity of our calling the very heavens
@@ -4850,8 +4849,7 @@ position.</p>
 <p>By the above definition of what a whale is, I do by no means exclude
 from the leviathanic brotherhood any sea creature hitherto identified
 with the whale by the best informed Nantucketers; nor, on the other
-hand, link with it any fish hitherto authoritatively regarded as alien.<span
-class="footnote"><span class="footnote-body">I am aware that down to the present time, the fish styled Lamatins and
+hand, link with it any fish hitherto authoritatively regarded as alien.<span class="footnote"><span class="footnote-body">I am aware that down to the present time, the fish styled Lamatins and
 Dugongs (Pig-fish and Sow-fish of the Coffins of Nantucket) are included
 by many naturalists among the whales. But as these pig-fish are a noisy,
 contemptible set, mostly lurking in the mouths of rivers, and feeding on
@@ -5235,7 +5233,7 @@ required no man to remove the shoes from his feet ere stepping upon
 the quarter-deck; and though there were times when, owing to peculiar
 circumstances connected with events hereafter to be detailed, he
 addressed them in unusual terms, whether of condescension or
-<strong xml:lang="la" lang="la">in terrorem</strong>, or otherwise; yet even Captain Ahab was by no means
+<strong lang="la">in terrorem</strong>, or otherwise; yet even Captain Ahab was by no means
 unobservant of the paramount forms and usages of the sea.</p>
 <p>Nor, perhaps, will it fail to be eventually perceived, that behind those
 forms and usages, as it were, he sometimes masked himself; incidentally
@@ -14454,7 +14452,7 @@ this way and that in the midnight sea, the enormous casks are slewed
 round and headed over, end for end, and sometimes perilously scoot
 across the slippery deck, like so many land slides, till at last
 man-handled and stayed in their course; and all round the hoops, rap,
-rap, go as many hammers as can play upon them, for now, <strong xml:lang="la" lang="la">ex officio</strong>,
+rap, go as many hammers as can play upon them, for now, <strong lang="la">ex officio</strong>,
 every sailor is a cooper.</p>
 <p>At length, when the last pint is casked, and all is cool, then the great
 hatchways are unsealed, the bowels of the ship are thrown open, and down
@@ -14565,7 +14563,7 @@ luxuriant profusion stamped; so that the precious gold seems almost to
 derive an added preciousness and enhancing glories, by passing through
 those fancy mints, so Spanishly poetic.</p>
 <p>It so chanced that the doubloon of the Pequod was a most wealthy example
-of these things. On its round border it bore the letters, <span class="proper_name" xml:lang="es" lang="es">Republica del
+of these things. On its round border it bore the letters, <span class="proper_name" lang="es">Republica del
 Ecuador: Quito</span>. So this bright coin came from a country planted in the
 middle of the world, and beneath the great equator, and named after it;
 and it had been cast midway up the Andes, in the unwaning clime that
@@ -15747,7 +15745,7 @@ it, or by any intermixture of all these, even or uneven; but merely by
 a kind of deaf and dumb, spontaneous literal process. He was a pure
 manipulator; his brain, if he had ever had one, must have early
 oozed along into the muscles of his fingers. He was like one of
-those unreasoning but still highly useful, <strong xml:lang="la" lang="la">multum in parvo</strong>, Sheffield
+those unreasoning but still highly useful, <strong lang="la">multum in parvo</strong>, Sheffield
 contrivances, assuming the exterior—though a little swelled—of a
 common pocket knife; but containing, not only blades of various sizes,
 but also screw-drivers, cork-screws, tweezers, awls, pens, rulers,
