--- a/text/Peter_Pan.html
+++ b/text/Peter_Pan.html
@@ -2,7 +2,7 @@
 <h1>Peter Pan</h1>
 <h2 class="subtitle">[Peter and Wendy]</h2>
 <h2 class="author">James Matthew Barrie</h2>
-<h4>A Millennium Fulcrum Edition <br /> (c)1991 by Duncan Research</h4>
+<h4>A Millennium Fulcrum Edition <br/> (c)1991 by Duncan Research</h4>
 </header>
 <section id="Table_of_Contents">
 <h2>Contents</h2>
@@ -319,7 +319,7 @@ Of course it was a Friday.</p>
 afterwards to her husband, while perhaps Nana was on the other side of
 her, holding her hand.</p>
 <p>“No, no,” Mr. Darling always said, “I am responsible for it all. I,
-George Darling, did it. <strong xml:lang="la" lang="la">Mea culpa, mea culpa.</strong>” He had had a classical
+George Darling, did it. <strong lang="la">Mea culpa, mea culpa.</strong>” He had had a classical
 education.</p>
 <p>They sat thus night after night recalling that fatal Friday, till every
 detail of it was stamped on their brains and came through on the other
