--- a/text/Robinson_Crusoe.html
+++ b/text/Robinson_Crusoe.html
@@ -2,8 +2,8 @@
 <h1>The Life and Adventures of Robinson Crusoe</h1>
 <h2 class="author">Daniel Defoe</h2>
 <p>With Illustrations by H. M. Brock</p>
-<p>London<br />
-Seeley, Service &amp; Co. Limited<br />
+<p>London<br/>
+Seeley, Service &amp; Co. Limited<br/>
 38 Great Russell Street</p>
 </header>
 <section id="Table_of_Contents">
@@ -1148,7 +1148,7 @@ had made candles of the rest: in a word, I made about two hundred
 and twenty pieces of eight of all my cargo; and with this stock I
 went on shore in the Brazils.</p>
 <p>I had not been long here before I was recommended to the house
-of a good honest man like himself, who had an <em xml:lang="es" lang="es">ingenio</em>, as
+of a good honest man like himself, who had an <em lang="es">ingenio</em>, as
 they call it (that is, a plantation and a sugar-house). I
 lived with him some time, and acquainted myself by that means
 with the manner of planting and making of sugar; and seeing how
@@ -1471,7 +1471,7 @@ ship’s side; and getting all into her, let go, and
 committed ourselves, being eleven in number, to God’s mercy
 and the wild sea; for though the storm was abated considerably,
 yet the sea ran dreadfully high upon the shore, and might be well
-called <em xml:lang="nl" lang="nl">den wild zee</em>, as the Dutch call the sea in a
+called <em lang="nl">den wild zee</em>, as the Dutch call the sea in a
 storm.</p>
 <p>And now our case was very dismal indeed; for we all saw
 plainly that the sea went so high that the boat could not live,
@@ -1494,7 +1494,7 @@ like this appeared; but as we made nearer and nearer the shore,
 the land looked more frightful than the sea.</p>
 <p>After we had rowed, or rather driven about a league and a
 half, as we reckoned it, a raging wave, mountain-like, came
-rolling astern of us, and plainly bade us expect the <em xml:lang="fr" lang="fr">coup de
+rolling astern of us, and plainly bade us expect the <em lang="fr">coup de
 grâce</em>. It took us with such a fury, that it
 overset the boat at once; and separating us as well from the boat
 as from one another, gave us no time to say, “O God!”
@@ -4742,7 +4742,7 @@ it, yet I never grudged my labour, in hopes of having a boat to
 go off to sea at last.</p>
 <p>However, though my little periagua was finished, yet the size
 of it was not at all answerable to the design which I had in view
-when I made the first; I mean of venturing over to the <em xml:lang="la" lang="la">terra
+when I made the first; I mean of venturing over to the <em lang="la">terra
 firma</em>, where it was above forty miles broad; accordingly, the
 smallness of my boat assisted to put an end to that design, and
 now I thought no more of it. As I had a boat, my next
@@ -6371,7 +6371,7 @@ time I should see them—especially if they should be
 divided, as they were the last time, into two parties; nor did I
 consider at all that if I killed one party—suppose ten or a
 dozen—I was still the next day, or week, or month, to kill
-another, and so another, even <em xml:lang="la" lang="la">ad infinitum</em>, till I should
+another, and so another, even <em lang="la">ad infinitum</em>, till I should
 be, at length, no less a murderer than they were in being
 man-eaters—and perhaps much more so. I spent my days
 now in great perplexity and anxiety of mind, expecting that I
