--- a/text/Siddhartha.html
+++ b/text/Siddhartha.html
@@ -2,7 +2,7 @@
 <h1>Siddhartha</h1>
 <h2 class="subtitle">Eine indische Dichtung</h2>
 <h2 class="author">Hermann Hesse</h2>
-<p>in der Ausgabe von <a href="http://www.gutenberg.org/etext/2499">Projekt Gutenberg</a>.<br/>Übertragen in gültiges <abbr xml:lang="en" lang="en" title="Hyptertext Markup Language">HTML</abbr>5 und mit <abbr xml:lang="en" lang="en" title="Cascading Stylesheets">CSS</abbr>&#xA0;3 aufgehübscht von Manuel Strehl, 2009.</p>
+<p>in der Ausgabe von <a href="http://www.gutenberg.org/etext/2499">Projekt Gutenberg</a>.<br/>Übertragen in gültiges <abbr lang="en" title="Hyptertext Markup Language">HTML</abbr>5 und mit <abbr lang="en" title="Cascading Stylesheets">CSS</abbr>&#xA0;3 aufgehübscht von Manuel Strehl, 2009.</p>
 </header>
 <section id="Table_of_Contents">
 <h2>Inhalt</h2>
